# rainix

./: .gitignore  .gitmodules  .prettierignore  CLAUDE.md  LICENSE  README.md  REUSE.toml  flake.nix  foundry.toml
.github/workflows/: check-shell.yml  component-screenshots.yml  npm-blacklist-self-test.yaml  pr-assessment.yaml  publish-soldeer.yaml  rainix-autopublish.yaml  rainix-build-pointers.yaml  rainix-copy-artifacts.yaml  rainix-manual-sol-artifacts.yaml  rainix-npm-blacklist.yaml  rainix-rs-autopublish.yaml  rainix-rs-static.yaml  rainix-rs-test.yaml  rainix-rs-wasm-test.yaml  rainix-rs-wasm.yaml  rainix-rs.yaml  rainix-sol-legal.yaml  rainix-sol-static.yaml  rainix-sol-test.yaml  rainix-sol.yaml  rainix-subgraph-test.yaml  rainix-vercel.yaml  test.yaml  test.yml
audit/2026-03-12-01/: triage.md
ci/: ci-rs-static.sh  ci-sol-artifacts.sh  ci-sol-static.sh  ci-sol-test.sh
example/: flake.nix
lib/: check-published-deploy-constants.sh  check-rainix-flake-pin.sh  component-screenshots.js  no-custom-natspec.sh  no-submodules.sh  sol-pragma-convention.sh  sol-single-contract.sh  subgraph.sh  update-rainix.sh
prettier-bundle/: .prettierrc.json  package-lock.json  package.json
rainix-static/: Cargo.toml
rainix-static/src/: frozen_snapshots.rs  main.rs  no_submodules.rs  soldeer_gate.rs
task/: ci-rs-artifacts.sh  ci-rs-static.sh  ci-rs-test.sh  ci-sol-artifacts.sh  ci-sol-static.sh  ci-sol-test.sh  rainix-prelude.sh  rainix-rs-artifacts.sh  rainix-rs-static.sh  rainix-sol-artifacts.sh  rainix-sol-static.sh  rainix-sol-test.sh  rainix-tauri-artifacts.sh
(+102 files in other folders)
