[package]
name = "rainix-static"
version = "0.1.0"
edition = "2021"
description = "General rainix tooling as subcommands (static checks + CI release tooling); workflows invoke this binary instead of inline bash or Python."
license = "LicenseRef-DCL-1.0"

[[bin]]
name = "rainix-static"
path = "src/main.rs"

[dependencies]
serde_json = "1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
